Updating more swig files for swig4 and python3.
I'm commenting out the %include "engine/propertyhdr.swg" lines
and the %pragma(python) code="from ooflib.blah.blah import XXXPtr"
lines.  I hope that neither is needed any more.

--- a/SRC/engine/IO/CMakeLists.txt
+++ b/SRC/engine/IO/CMakeLists.txt
@@ -13,3 +13,11 @@ target_sources(oof2engine
   propertyoutput.C
   propertyoutput.h
   )
+
+swig_sources(
+  SWIGFILES
+  contour
+  propertyoutput
+  LIBRARIES
+  oof2common
+  oof2engine)
