--- a/SRC/engine/property/orientation/CMakeLists.txt
+++ b/SRC/engine/property/orientation/CMakeLists.txt
@@ -12,3 +12,9 @@ target_sources(oof2engine
   orientation.h
   )
  
+swig_sources(
+  SWIGFILES
+  orientation
+  LIBRARIES
+  oof2common
+  oof2engine)
