Finished the first pass through the swig files, I think.
Every swig file should be picked up by the CMakeLists.txt files,
and swig runs without reporting any errors on them.  That probably
doesn't mean that there aren't any errors.  "make install" is failing,
so there is something wrong somewhere.

--- a/SRC/engine/property/forcedensity/CMakeLists.txt
+++ b/SRC/engine/property/forcedensity/CMakeLists.txt
@@ -12,5 +12,11 @@ add_subdirectory(nonconstant)
 target_sources(oof2engine
   PRIVATE
   forcedensity.C
-  forcedensity.h
-  )
+  forcedensity.h)
+
+swig_sources(
+  SWIGFILES
+  forcedensity
+  LIBRARIES
+  oof2common
+  oof2engine)
