--- a/SRC/engine/property/massdensity/CMakeLists.txt
+++ b/SRC/engine/property/massdensity/CMakeLists.txt
@@ -9,5 +9,11 @@
 target_sources(oof2engine
   PRIVATE
   massdensity.C
-  massdensity.h
-  )
+  massdensity.h)
+
+swig_sources(
+  SWIGFILES
+  massdensity
+  LIBRARIES
+  oof2common
+  oof2engine)
