Commented out debugging lines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,9 +66,9 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 # if(APPLE)
 #   set(CMAKE_INSTALL_RPATH "@executable_path/../lib")
 # endif()
-message("CMAKE_INSTALL_RPATH = ${CMAKE_INSTALL_RPATH}")
-message("CMAKE_INSTALL_LIBDIR = ${CMAKE_INSTALL_LIBDIR}")
-message("CMAKE_MACOSX_RPATH = ${CMAKE_MACOSX_RPATH}")
+# message("CMAKE_INSTALL_RPATH = ${CMAKE_INSTALL_RPATH}")
+# message("CMAKE_INSTALL_LIBDIR = ${CMAKE_INSTALL_LIBDIR}")
+# message("CMAKE_MACOSX_RPATH = ${CMAKE_MACOSX_RPATH}")
 # message("APPLE = ${APPLE}")
 
 function(swig_sources)
