Added comments.  Added swig call.

--- a/SRC/EXTENSIONS/CMakeLists.txt
+++ b/SRC/EXTENSIONS/CMakeLists.txt
@@ -6,4 +6,9 @@
 # versions of this software, you first contact the authors at
 # oof_manager@nist.gov.
 
+# This file, SRC/EXTENSIONS/CMakeLists.txt, is used when building
+# OOF2.  It shoud list all the subdirectories that contain OOF2 C,
+# C++, or Python code.  Those directories must contain CMakeLists.txt
+# files of their own.
+
 add_subdirectory(diffusion)
