--- a/oof2.in
+++ b/oof2.in
@@ -1,4 +1,5 @@
-#!@PYEXEC@ -W error
+#!@PYEXEC@
+####!@PYEXEC@ -W error
 # -*- python -*-
 
 # This software was produced by NIST, an agency of the U.S. government,
