Changed ooferror2 to ooferror.  It doesn't work.
CMake requires targets to all have different names, even if they
are in different directories.

--- a/SRC/engine/CMakeLists.txt
+++ b/SRC/engine/CMakeLists.txt
@@ -169,7 +169,7 @@ swig_sources(
   meshiterator
   nodalequation
   node
-  ooferror2
+  ooferror
   orientationimage
   outputval
   pixelgroupsubproblem
